--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container my-5 py-5 z-depth-1">
+<div class="container my-5 py-5 z-depth-1" ngxUiLoaderBlurred>
 
   <section class="px-md-5 mx-md-5 text-center text-lg-left dark-grey-text">
     <div class="row d-flex justify-content-center">
