--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -31,8 +31,7 @@
               <a href="">Забыли пароль?</a>
             </div>
           </div>
-          <button [disabled]="loading" class="btn btn-info btn-block my-4" (click)="login()">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+          <button class="btn btn-info btn-block my-4" (click)="login()">
             Вход
           </button>
 
