--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -59,7 +59,7 @@
                      [(ngModel)]="applicationLightForm.phoneNumber" name="phoneNumber"
                      [formControl]="applicationLightForm.controls['phoneNumber']"
                      prefix="+7" mask=' (000) 000-0000' [showMaskTyped]="true"
-                     placeHolderCharacter="0" (ngModelChange)="searchByPhone()"/>
+                     placeHolderCharacter="0" (change)="searchByPhone()"/>
             </div>
           </div>
           <div class="form-group row">
@@ -73,6 +73,7 @@
             <label for="form7" class="col-sm-2 col-form-label" translate>Выберите агента</label>
             <div class="col-sm-10">
               <ng-select
+                [items]="agentList"
                 [(ngModel)]="applicationLightForm.agentLogin"
                 formControlName="agentLogin"
                 bindValue="value"
