--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -2,16 +2,16 @@
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item">
       <a class="nav-link active" id="fillClaims-tab" data-toggle="tab" href="#fillClaims" role="tab"
-         aria-controls="fillClaims"
+         aria-controls="fillClaims" (click)="changeTab('create')"
          aria-selected="true" translate> claim.title</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" id="contractOU-tab" data-toggle="tab" href="#contractOU" role="tab" aria-controls="contractOU"
-         aria-selected="false" translate>claim.contractOU</a>
+         aria-selected="false" (click)="changeTab('create')" translate>claim.contractOU</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" id="impressions-tab" data-toggle="tab" href="#impressions" role="tab"
-         aria-controls="impressions"
+         aria-controls="impressions" (click)="changeTab('add-event')"
          aria-selected="false" translate>claim.impressions</a>
     </li>
     <!--    <li class="nav-item">-->
@@ -231,7 +231,7 @@
                       <div class="row">
                         <div class="col-sm">
                           <label>Номер договора</label>
-                          <input type="text" class="form-control" minlength="10" formControlName="contractNumber"
+                          <input type="text" class="form-control" maxlength="10" formControlName="contractNumber"
                                  [(ngModel)]="applicationForm.contractNumber"
                                  [readonly]="hasShowApplicationGroup('UPDATE_DEAL_DATA')" />
                         </div>
@@ -1184,7 +1184,9 @@
       2
     </div>
     <div class="tab-pane fade" id="impressions" role="tabpanel" aria-labelledby="impressions-tab">
-      <app-acts></app-acts>
+
+    <router-outlet></router-outlet>
+<!--      <app-acts></app-acts>-->
     </div>
     <!--    <div class="tab-pane fade" id="journals" role="tabpanel" aria-labelledby="journals-tab">-->
     <!--      3-->
@@ -1192,3 +1194,4 @@
   </div>
 </div>
 <br/>
+<app-confirm-dialog></app-confirm-dialog>
