--- a/frontend/src/app/components/home/calendar/calendar.component.html
+++ b/frontend/src/app/components/home/calendar/calendar.component.html
@@ -6,13 +6,14 @@
         mwlCalendarPreviousView
         [view]="view"
         [(viewDate)]="viewDate"
-        (viewDateChange)="closeOpenMonthViewDay()"
+        (viewDateChange)="closeOpenMonthViewDay();getEventForCalendar()"
       >
         &lsaquo;
       </div>
       <div
         class="btn btn-outline-secondary"
         mwlCalendarToday
+        (click)="getEventForCalendar()"
         [(viewDate)]="viewDate"
       >
         Сегодня
@@ -22,7 +23,7 @@
         mwlCalendarNextView
         [view]="view"
         [(viewDate)]="viewDate"
-        (viewDateChange)="closeOpenMonthViewDay()"
+        (viewDateChange)="closeOpenMonthViewDay();;getEventForCalendar()"
       >
         &rsaquo;
       </div>
@@ -97,90 +98,90 @@
 
 <br/><br/><br/>
 
-<h3>
-  Edit events
-  <button class="btn btn-primary float-right" (click)="addEvent()">
-    Add new
-  </button>
-  <div class="clearfix"></div>
-</h3>
+<!--<h3>-->
+<!--  Edit events-->
+<!--  <button class="btn btn-primary float-right" (click)="addEvent()">-->
+<!--    Add new-->
+<!--  </button>-->
+<!--  <div class="clearfix"></div>-->
+<!--</h3>-->
 
-<div class="table-responsive">
-  <table class="table table-bordered">
-    <thead>
-    <tr>
-      <th>Title</th>
-      <th>Primary color</th>
-      <th>Secondary color</th>
-      <th>Starts at</th>
-      <th>Ends at</th>
-      <th>Remove</th>
-    </tr>
-    </thead>
+<!--<div class="table-responsive">-->
+<!--  <table class="table table-bordered">-->
+<!--    <thead>-->
+<!--    <tr>-->
+<!--      <th>Title</th>-->
+<!--      <th>Primary color</th>-->
+<!--      <th>Secondary color</th>-->
+<!--      <th>Starts at</th>-->
+<!--      <th>Ends at</th>-->
+<!--      <th>Remove</th>-->
+<!--    </tr>-->
+<!--    </thead>-->
 
-    <tbody>
-    <tr *ngFor="let event of events">
-      <td>
-        <input
-          type="text"
-          class="form-control"
-          [(ngModel)]="event.title"
-          (keyup)="refresh.next()"
-        />
-      </td>
-      <td>
-        <input
-          type="color"
-          [(ngModel)]="event.color.primary"
-          (change)="refresh.next()"
-        />
-      </td>
-      <td>
-        <input
-          type="color"
-          [(ngModel)]="event.color.secondary"
-          (change)="refresh.next()"
-        />
-      </td>
-      <td>
-        <input
-          class="form-control"
-          type="text"
-          mwlFlatpickr
-          [(ngModel)]="event.start"
-          (ngModelChange)="refresh.next()"
-          [altInput]="true"
-          [convertModelValue]="true"
-          [enableTime]="true"
-          dateFormat="Y-m-dTH:i"
-          altFormat="F j, Y H:i"
-          placeholder="Not set"
-        />
-      </td>
-      <td>
-        <input
-          class="form-control"
-          type="text"
-          mwlFlatpickr
-          [(ngModel)]="event.end"
-          (ngModelChange)="refresh.next()"
-          [altInput]="true"
-          [convertModelValue]="true"
-          [enableTime]="true"
-          dateFormat="Y-m-dTH:i"
-          altFormat="F j, Y H:i"
-          placeholder="Not set"
-        />
-      </td>
-      <td>
-        <button class="btn btn-danger" (click)="deleteEvent(event)">
-          Удалить
-        </button>
-      </td>
-    </tr>
-    </tbody>
-  </table>
-</div>
+<!--    <tbody>-->
+<!--    <tr *ngFor="let event of events">-->
+<!--      <td>-->
+<!--        <input-->
+<!--          type="text"-->
+<!--          class="form-control"-->
+<!--          [(ngModel)]="event.title"-->
+<!--          (keyup)="refresh.next()"-->
+<!--        />-->
+<!--      </td>-->
+<!--      <td>-->
+<!--        <input-->
+<!--          type="color"-->
+<!--          [(ngModel)]="event.color.primary"-->
+<!--          (change)="refresh.next()"-->
+<!--        />-->
+<!--      </td>-->
+<!--      <td>-->
+<!--        <input-->
+<!--          type="color"-->
+<!--          [(ngModel)]="event.color.secondary"-->
+<!--          (change)="refresh.next()"-->
+<!--        />-->
+<!--      </td>-->
+<!--      <td>-->
+<!--        <input-->
+<!--          class="form-control"-->
+<!--          type="text"-->
+<!--          mwlFlatpickr-->
+<!--          [(ngModel)]="event.start"-->
+<!--          (ngModelChange)="refresh.next()"-->
+<!--          [altInput]="true"-->
+<!--          [convertModelValue]="true"-->
+<!--          [enableTime]="true"-->
+<!--          dateFormat="Y-m-dTH:i"-->
+<!--          altFormat="F j, Y H:i"-->
+<!--          placeholder="Not set"-->
+<!--        />-->
+<!--      </td>-->
+<!--      <td>-->
+<!--        <input-->
+<!--          class="form-control"-->
+<!--          type="text"-->
+<!--          mwlFlatpickr-->
+<!--          [(ngModel)]="event.end"-->
+<!--          (ngModelChange)="refresh.next()"-->
+<!--          [altInput]="true"-->
+<!--          [convertModelValue]="true"-->
+<!--          [enableTime]="true"-->
+<!--          dateFormat="Y-m-dTH:i"-->
+<!--          altFormat="F j, Y H:i"-->
+<!--          placeholder="Not set"-->
+<!--        />-->
+<!--      </td>-->
+<!--      <td>-->
+<!--        <button class="btn btn-danger" (click)="deleteEvent(event)">-->
+<!--          Удалить-->
+<!--        </button>-->
+<!--      </td>-->
+<!--    </tr>-->
+<!--    </tbody>-->
+<!--  </table>-->
+<!--</div>-->
 
 <ng-template #modalContent let-close="close">
   <div class="modal-header">
