--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1204,9 +1204,11 @@
       2
     </div>
     <div class="tab-pane fade" id="impressions" role="tabpanel" aria-labelledby="impressions-tab">
+      3
+      <div class="card-body">
       <router-outlet></router-outlet>
+    </div>
     </div>
   </div>
 </div>
 <br/>
-<app-confirm-dialog></app-confirm-dialog>
