--- a/frontend/src/app/components/board/board.component.html
+++ b/frontend/src/app/components/board/board.component.html
@@ -3,13 +3,13 @@
   <div class="row">
     <div class="btn-group btn-breadcrumb">
       <a href="#" class="btn btn-primary"><i class="fa fa-home"></i></a>
-      <a  class="btn btn-primary active">Личный кабинет</a>
+      <a  class="btn btn-primary active">Панель управления</a>
     </div>
   </div>
 
   <br/>
 
-  <router-outlet></router-outlet>
+  <router-outlet *ngIf="!displayBoardContent"></router-outlet>
 
   <br/>
   <div *ngIf="displayBoardContent">
