--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -77,3 +77,11 @@ app-charts {
   width: 200px!important;
   margin: 5px;
 }
+
+.accordion-header {
+  height: 50px;
+}
+
+.card-body.accordionAboutObject{
+  //min-height: 790px!important;
+}
